@@ -62,12 +62,12 @@ module Sequel
         sql << UNSIGNED if column[:unsigned]
         sql << " DEFAULT #{literal(column[:default])}" if column.include?(:default)
         sql << PRIMARY_KEY if column[:primary_key]
+        sql << " #{auto_increment_sql}" if column[:auto_increment]
         if column[:table]
           sql << " REFERENCES #{column[:table]}"
           sql << "(#{column[:key]})" if column[:key]
+          sql << " ON DELETE #{on_delete_clause(column[:on_delete])}" if column[:on_delete]
         end
-        sql << " ON DELETE #{on_delete_clause(column[:on_delete])}" if column[:on_delete]
-        sql << " #{auto_increment_sql}" if column[:auto_increment]
         sql
       end
       
